--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,4 +18,12 @@
     .tag{
         @apply text-[14px] inline-flex border border-[#222]/10 px-[12px] py-[4px] rounded-lg tracking-tight;
     }
+    .section-title{
+        @apply text-center text-3xl md:text-[54px] md:leading-[60px] font-bold tracking-tighter bg-gradient-to-b from-black to-[#001e80] text-transparent bg-clip-text;
+    }
+    .section-description{
+        @apply text-center text-[22px] leading-[30px] tracking-tight text-[#010d3e];
+
+    }
+    
 }
