--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,5 +25,11 @@
         @apply text-center text-[22px] leading-[30px] tracking-tight text-[#010d3e];
 
     }
+    .section-heading{
+        @apply max-w-[540px] mx-auto
+    }
+    .card{
+        @apply p-10 border border-[#222222]/10 rounded-3xl shadow-[0_7px_14px_#eaeaea] max-w-xs w-full
+    }
     
 }
